api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kws
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: api
