api/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: api
  namespace: kws
  annotations:
    kubernetes.io/ingress.class: traefik  
spec:
  rules:
  - host: api.knd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 8000
